--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "2.1.3",
     "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "solclientjs": "^10.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
